<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.brandon.weightconverter.AboutActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/icon_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/appTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/textColor1"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="42dp"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/textColor2"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/whereToFindMeText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitleText"
        app:layout_constraintVertical_bias="0.094"/>

    <TextView
        android:id="@+id/whereToFindMeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/link_layout"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/background_simple_line"
        android:text="@string/where_to_find_the_author"
        android:textAlignment="center"
        android:textColor="@color/textColor1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/link_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <LinearLayout
        android:id="@+id/link_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>

        <ImageButton
            android:id="@+id/about_github"
            android:layout_width="@dimen/link_button_size"
            android:layout_height="@dimen/link_button_size"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/link_to_authors_github_account"
            android:onClick="linkButtonClicked"
            android:padding="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_github"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/about_linkedin"
            android:layout_width="@dimen/link_button_size"
            android:layout_height="@dimen/link_button_size"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/link_to_the_authors_linkedin_account"
            android:onClick="linkButtonClicked"
            android:padding="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_linkedin"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/about_freelancer"
            android:layout_width="@dimen/link_button_size"
            android:layout_height="@dimen/link_button_size"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/link_to_the_authors_freelancer_com_account"
            android:onClick="linkButtonClicked"
            android:padding="4dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_freelancer_24dp"
            android:tint="#6dc0e6"/>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
